# ros2-learning

./: README.md  ROS2学习代码与笔记.md
ws00_helloworld/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws00_helloworld/log/: latest_build
ws00_helloworld/src/turtlesim/: setup.cfg  setup.py
ws01_plumbing/install/: local_setup.sh  setup.sh
ws01_plumbing/log/: latest_build
ws01_plumbing/src/base_interfaces_demo/: CMakeLists.txt  package.xml
ws01_plumbing/src/py01_topic/: package.xml  setup.py
ws01_plumbing/src/py01_topic/py01_topic/: demo01_publisher_str_py.py
ws01_plumbing/src/py02_service/: package.xml  setup.py
ws01_plumbing/src/py02_service/py02_service/: demo02_client_py.py
ws01_plumbing/src/py03_action/: setup.py
ws01_plumbing/src/py03_action/py03_action/: demo01_action_server_py.py  demo02_action_client_py.py
ws01_plumbing/src/py04_param/: setup.py
ws01_plumbing/src/py04_param/py04_param/: demo00_param_py.py
ws01_plumbing/src/py05_names/: setup.py
ws01_plumbing/src/py05_names/py05_names/: demo01_names.py
ws01_plumbing/src/py06_time/: package.xml  setup.py
ws01_plumbing/src/py07_exercise/: setup.cfg  setup.py
ws01_plumbing/src/py07_exercise/launch/: exe02_server.launch.py  exe03_client.launch.py
ws01_plumbing/src/turtlesim/src/: turtle.cpp
ws01_plumbing/src/tutorails_plumbing/: package.xml  setup.cfg  setup.py
ws02_tools/install/: local_setup.sh  setup.sh
ws02_tools/log/: latest_build
ws02_tools/src/py01_launch/: package.xml  setup.py
绘图/: 02-01通信模型.drawio  03-01分布式.drawio  03-05话题分类.drawio
(+97 files in other folders)
